--- a/index.css
+++ b/index.css
@@ -153,12 +153,27 @@ body, html {
     top:48px;
     left:0px;
     background-color:#E6E6E6;
-    border-radius:0 6px 0 0;
+    border-radius:0 12px 0 0;
     border-style:solid solid none none;
     border-width:0.5px;
     border-color:rgba(0,0,0, 0.45);
     z-index:99;
 }
-#leftmenu.open {
+.rightmenu {
+    height:calc(100% - 48px);
+    width:600px;
+    display:none;
+    position:fixed;
+    top:48px;
+    right:0px;
+    background-color:#E6E6E6;
+    border-radius:12px 0px 0 0;
+    border-style:solid none none solid;
+    border-width:0.5px;
+    border-color:rgba(0,0,0, 0.45);
+    z-index:99;
+}
+#leftmenu.open,
+.rightmenu.open {
     display:block;
 }
