--- a/frontend/index.css
+++ b/frontend/index.css
@@ -231,6 +231,8 @@ body {
     border-color:rgba(0,0,0, 0.45);
     z-index:99;
     box-sizing:border-box;
+    overflow-x:hidden;
+    overflow-y:auto;
 }
 #leftmenu.open,
 .rightmenu.open {
