--- a/frontend/index.css
+++ b/frontend/index.css
@@ -576,37 +576,68 @@ body {
 }
 
 #gantt_container {
-	height:100%;
-	width:100%;
-	position:relative;
-	padding:64px 12px 12px 12px;
+    height:100%;
+    width:auto;
+	min-width:100%;
+    position:relative;
+    padding:120px 0 0 0;
 	margin:0;
 	background-color:#FFFFFF;
 	box-sizing:border-box;
 	vertical-align:top;
-	font-size:0;
+    font-size:0;
+    overflow-x:auto;
 }
 
-#gantt_controls {
+#gantt_titles {
 	height:120px;
-	width:100%;
+    min-width:100%;
+    width:auto;
 	box-sizing:border-box;
 	display:block;
 	position:absolute;
 	top:0px;
 	left:0px;
 	background-color:#00695C;
-    padding:6px;
+    padding:25px;
     border-bottom:0.5px solid rgba(0,0,0, 0.25);
+    font-size:0;
+}
+.gantt_title {
+    height:100%;
+    width:120px;
+    display:inline-block;
+    box-sizing:border-box;
+    padding:11px 12px;
+    font:bold 18px/24px "Roboto", sans-serif;
+    color:rgba(255,255,255, 0.6);
+    border-right:1px solid rgba(255,255,255, 0.25);
+}
+.gantt_title b {
+    color:#FFFFFF;
+}
+.gantt_title:nth-last-child(1),
+.gantt_column:nth-last-child(1) {
+    border-right:none;
 }
 
 #gantt_content {
 	height:100%;
-	width:100%;
-	display:block;
-	padding:0;
+    min-width:100%;
+    width:auto;
+    display:block;
+    box-sizing:border-box;
+	padding:25px;
 	margin:0;
-	position:relative;
+    position:relative;
+    font-size:0px;
+}
+.gantt_column {
+    height:100%;
+    width:120px;
+    display:inline-block;
+    box-sizing:border-box;
+    border-right:1px solid rgba(0,0,0, 0.25);
 }
 
 
