--- a/frontend/index.css
+++ b/frontend/index.css
@@ -640,4 +640,28 @@ body {
     border-right:1px solid rgba(0,0,0, 0.25);
 }
 
-
+#gantt_controls {
+    height:48px;
+    width:100%;
+    padding:6px 12px;
+    font-size:0;
+}
+#gantt_controls .button {
+    height:36px;
+    width:36px;
+    display:inline-block;
+    box-sizing:border-box;
+    padding:6px;
+    font:normal 24px/24px "Material Icons";
+    border-radius:50%;
+    cursor:pointer;
+    margin-right:6px;
+    color:rgba(0,0,0, 0.6);
+}
+#gantt_controls .button:hover {
+    background-color:rgba(0,0,0, 0.1);
+}
+#gantt_controls .button.sel {
+    background-color:#009688;
+    color:#FFFFFF;
+}
