--- a/frontend/index.css
+++ b/frontend/index.css
@@ -112,38 +112,6 @@ body {
     border-radius:50%;
     border:1px solid rgba(0,0,0, 0.25);
 }
-/*#topmenu .button.selec::before {
-    content:"";
-    height:25px;
-    width:14px;
-    display:block;
-    position:absolute;
-    bottom:-6.5px;
-    left:-14.5px;
-    border-radius:0px 0px 12px 0px;
-    border-style: none solid solid none;
-    border-color:rgba(0,0,0, 0.45); 
-    border-width:0.5px;
-    background-color:#fff;
-    box-shadow:0 6px 0 #E6E6E6, 6px 0 0 #E6E6E6, 6px 6px 0 #E6E6E6; 
-}
-#topmenu .button.selec::after {
-    content:"";
-    height:25px;
-    width:14px;
-    display:block;
-    position:absolute;
-    bottom:-6.5px;
-    right:-14.5px;
-    border-radius:0px 0px 0px 12px;
-    border-style: none none solid solid;
-    border-color:rgba(0,0,0, 0.45); 
-    border-width:0.5px;
-    background-color:#fff;
-    box-shadow:0 6px 0 #E6E6E6, -6px 0 0 #E6E6E6, -6px 6px 0 #E6E6E6; 
-
-}
-*/
 #topmenu #lm_btn.selec::after {
     content:"Main Menu";
     height:48px;
@@ -268,142 +236,6 @@ body {
     background:none;
     z-index:1;
 }
-/* .cal_picker_row {
-    height:50%;
-    width:100%;
-    display:block;
-    vertical-align:top;
-    font-size:0px;
-    position:relative;
-}
-#cal_picker_dow {
-    height:36px;
-    width:100%;
-    display:block;
-    position:absolute;
-    box-sizing:border-box;
-    top:0;
-    left:0;
-    background-color:rgba(0,0,0, 0.1);
-    color:#fff;
-    font:normal 16px/24px "Roboto", sans-serif;
-    text-align:center;
-    padding:6px;
-}
-#cal_picker_mnth,
-#cal_picker_year {
-    height:48px;
-    width:100%;
-    display:block;
-    position:absolute;
-    box-sizing:border-box;
-    color:#fff;
-    font:normal 24px/36px "Roboto", sans-serif;
-    text-align:center;
-    padding:6px;
-    left:0;
-    top:calc(50% - 120px);
-}
-#cal_picker_year {
-    top:unset;
-    bottom:calc(50% - 120px);
-}
-#cal_picker_day {
-    height:136px;
-    width:100%;
-    display:block;
-    position:absolute;
-    box-sizing:border-box;
-    color:#fff;
-    font:normal 108px/136px "Roboto", sans-serif;
-    text-align:center;
-    padding:0;
-    left:0;
-    top:calc(50% - 72px);
-}
-#cal_picker_my_rot {
-    height:48px;
-    width:100%;
-    display:block;
-    box-sizing:border-box;
-    position:absolute;
-    top:0;
-    left:0;
-    font-size:0px;
-}
-#cal_picker_grid {
-    height:calc(100% - 96px);
-    width:100%;
-    box-sizing:border-box;
-    position:absolute;
-    top:48px;
-    left:0;
-    background-color:rgba(255,255,255, 0.85);
-    table-layout:fixed;
-}
-#cal_picker_grid th {
-    height:24px;
-    vertical-align:middle;
-    text-align:center;
-    font:normal 12px/24px "Roboto", sans-serif;
-    color:#000;
-}
-#cal_picker_grid td {
-    text-align:center;
-    vertical-align:middle;
-    height:calc((100% - 24px) / 7);
-    width:calc(100% / 7);
-}
-#cal_picker_grid .cal_picker_g_btn {
-    height:36px;
-    width:36px;
-    display:inline-block;
-    box-sizing:border-box;
-    padding:6px;
-    font:normal 14px/24px "Roboto", sans-serif;
-    color:rgba(0,0,0, 0.8);
-    border-radius:50%;
-    cursor:pointer;
-}
-#cal_picker_grid .cal_picker_g_btn:hover {
-    background-color:rgba(0,0,0, 0.1);
-}
-#cal_picker_grid .cal_picker_g_btn.selec {
-    background-color:#2196F3;
-    color:#fff;
-}
-#cal_picker_my_rot .button {
-    height:36px;
-    width:36px;
-    box-sizing:border-box;
-    display:inline-block;
-    padding:6px;
-    margin:6px;
-    font:normal 24px/24px "Material Icons";
-    text-align:center;
-    color:#fff;
-    cursor:pointer;
-    border-radius:18px;
-    position:relative;
-    background-color:inherit;
-    vertical-align:top;
-}
-#cal_picker_my_rot .button:hover {
-    background-color:rgba(255,255,255, 0.5);
-}
-#cal_picker_my_rot #cal_picker_rot_disp,
-#cal_picker_my_rot #cal_picker_rot_year {
-    height:36px;
-    width:304px;
-    box-sizing:border-box;
-    display:inline-block;
-    padding:6px;
-    margin:6px 0px;
-    font:normal 14px/24px "Roboto", sans-serif;
-    text-align:center;
-    color:#fff;
-    vertical-align:top;
-} */
 #date_picker {
     width:400px;
     height:600px;
@@ -575,7 +407,7 @@ body {
     cursor:pointer;
 }
 
-#gantt_container {
+#schedule_container {
     height:100%;
     width:auto;
 	min-width:100%;
@@ -589,7 +421,7 @@ body {
     overflow-x:auto;
 }
 
-#gantt_titles {
+#schedule_titles {
 	height:120px;
     min-width:100%;
     width:auto;
@@ -599,9 +431,20 @@ body {
 	top:0px;
 	left:0px;
 	background-color:#00695C;
-    padding:25px;
+    padding:25px 25px 24.5px 25px;
     border-bottom:0.5px solid rgba(0,0,0, 0.25);
     font-size:0;
+}
+.daygrid_title {
+	height:100%;
+	width:calc(100% / 7);
+	display:inline-block;
+	box-sizing:border-box;
+	padding:11px 0;
+	font:bold 14px/48px "Roboto", sans-serif;
+	color:rgba(255,255,255, 0.6);
+    border-right:1px solid rgba(255,255,255, 0.25);
+	text-align:center;
 }
 .gantt_title {
     height:100%;
@@ -613,15 +456,18 @@ body {
     color:rgba(255,255,255, 0.6);
     border-right:1px solid rgba(255,255,255, 0.25);
 }
-.gantt_title b {
+.gantt_title b,
+.daygrid_title b {
     color:#FFFFFF;
 }
 .gantt_title:nth-last-child(1),
-.gantt_column:nth-last-child(1) {
+.gantt_column:nth-last-child(1),
+.daygrid_title:nth-last-child(1),
+.daygrid_colum:nth-last-child(1) {
     border-right:none;
 }
 
-#gantt_content {
+#schedule_content {
 	height:100%;
     min-width:100%;
     width:auto;
@@ -632,6 +478,17 @@ body {
     position:relative;
     font-size:0px;
 }
+.daygrid_column {
+	height:100%;
+	width:calc(100% / 7);
+	display:inline-block;
+	box-sizing:border-box;
+	border-right:1px solid rgba(0,0,0, 0.25);
+}
+
+.daygrid_column:nth-child(7n) {
+	border-right:none;
+}
 .gantt_column {
     height:100%;
     width:120px;
@@ -640,13 +497,13 @@ body {
     border-right:1px solid rgba(0,0,0, 0.25);
 }
 
-#gantt_controls {
+#schedule_controls {
     height:48px;
     width:100%;
     padding:6px 12px;
     font-size:0;
 }
-#gantt_controls .button {
+#schedule_controls .button {
     height:36px;
     width:36px;
     display:inline-block;
@@ -658,10 +515,10 @@ body {
     margin-right:6px;
     color:rgba(0,0,0, 0.6);
 }
-#gantt_controls .button:hover {
+#schedule_controls .button:hover {
     background-color:rgba(0,0,0, 0.1);
 }
-#gantt_controls .button.sel {
+#schedule_controls .button.sel {
     background-color:#009688;
     color:#FFFFFF;
 }
