--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -33,9 +33,10 @@ body {
     position:absolute;
     top:0px;
     right:0px;
+    font-size:0px;
     margin:6px 12px 6px 6px;
     padding:6px 12px 6px 36px;
-    border-radius:18px;
+    border-radius:9px;
     background-color:#E6E6E6; /* rgba(0,0,0, 0.1) */
     border:none;
     outline:none;
@@ -66,6 +67,10 @@ body {
     width:100%;
     color:#000;
     border:none;
+    margin:0;
+    padding:0;
+    vertical-align:top;
+    display:inline-block;
     outline:none;
     font:normal 14px/24px "Roboto", sans-serif;
 }
